Set Password Alignment issue fixes

--- a/src/keycloak-theme/login/KcApp.css
+++ b/src/keycloak-theme/login/KcApp.css
@@ -69,8 +69,10 @@
 
 .floating-label-group {
 	position: relative;
-	margin-top: 15px;
-	margin-bottom: 25px;
+	margin-top: 10px;
+	margin-bottom: 10px;
+	margin-left: 20px;
+    margin-right: 20px;
 
 	.floating-label {
 		font-size: 13px;
@@ -83,14 +85,16 @@
 	}
 
 	input:focus ~ .floating-label {
-		top: -15px;
+		top: -25px;
 		bottom: 0px;
 		left: 0px;
 		font-size: 11px;
 		opacity: 1;
 		color: #404040;
+		box-shadow: none;
 	}
-}
+	
+} 
 
 .form-control {
     border: none;
@@ -99,6 +103,10 @@
     box-shadow: none;
 }
 
-*:focus {
-    outline: none;
+.form-group {
+    margin-bottom: 0px;
+}
+
+#kc-form-buttons {
+    margin-top: 30px;
 }
